templates/radar-push-endpoint_template.yaml
---
# Source: radar-push-endpoint/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-radar-push-endpoint
  labels:
    helm.sh/chart: radar-push-endpoint-0.2.3
    app.kubernetes.io/name: radar-push-endpoint
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.2.2"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      helm.sh/chart: radar-push-endpoint-0.2.3
      app.kubernetes.io/name: radar-push-endpoint
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/version: "0.2.2"
      app.kubernetes.io/managed-by: Helm
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 192.168.0.0/16
        - 172.16.0.0/12
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cp-schema-registry
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cp-kafka
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: redis
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radar-rest-sources-backend
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: management-portal
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
---
# Source: radar-push-endpoint/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-radar-push-endpoint
  labels:
    helm.sh/chart: radar-push-endpoint-0.2.3
    app.kubernetes.io/name: radar-push-endpoint
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.2.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: http
      protocol: TCP
      name: http
    - name: metrics
      port: 5556
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/name: radar-push-endpoint
    app.kubernetes.io/instance: release-name
---
# Source: radar-push-endpoint/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-radar-push-endpoint
  labels:
    helm.sh/chart: radar-push-endpoint-0.2.3
    app.kubernetes.io/name: radar-push-endpoint
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.2.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: radar-push-endpoint
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/configmap: 2c583c90a16e3d7bbd1425290502699aba6a27e89d49b3cabce87f6c6ababa58
      labels:
        app.kubernetes.io/name: radar-push-endpoint
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/name"
                    operator: In
                    values:
                    - radar-push-endpoint
                  - key: "app.kubernetes.io/instance"
                    operator: In
                    values:
                    - release-name
              topologyKey: "kubernetes.io/hostname"
      containers:
        - image: sscaling/jmx-prometheus-exporter
          securityContext:
            {}
          imagePullPolicy: IfNotPresent
          name: prometheus-jmx-exporter
          ports:
          - containerPort: 5556
            protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
          - mountPath: /etc/radar-push-endpoint/
            name: gateway-jmx-configmap
        - name: radar-push-endpoint
          image: "radarbase/radar-push-endpoint:0.2.2"
          imagePullPolicy: IfNotPresent
          command:
            - radar-push-endpoint
            - /etc/radar-push-endpoint/push-endpoint.yml
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - /etc/radar-push-endpoint/healthcheck.sh
            initialDelaySeconds: 20
            periodSeconds: 90
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - /etc/radar-push-endpoint/healthcheck.sh
            initialDelaySeconds: 20
            periodSeconds: 90
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /etc/radar-push-endpoint
      volumes:
        - name: config
          configMap:
            name: release-name-radar-push-endpoint
        - name: gateway-jmx-configmap
          configMap:
            name:  release-name-radar-push-endpoint-jmx-configmap
---
# Source: radar-push-endpoint/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-radar-push-endpoint
  labels:
    helm.sh/chart: radar-push-endpoint-0.2.3
    app.kubernetes.io/name: radar-push-endpoint
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.2.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /push/integrations/$1
    nginx.ingress.kubernetes.io/server-snippet: |
      location /push-endpoint/garmin {
        # set client body size to 20M #
        client_max_body_size 20M;
    
        # restrict access to only certain IPs provided by Garmin Health API
        allow 204.77.162.0/23;
        allow 98.199.124.0/23;
        allow 185.132.79.0/24;
        allow 208.65.206.0/23;
        allow 185.207.94.0/23;
        allow 198.233.176.0/24;
        deny all;
      }
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "localhost"
      secretName: radar-base-tls-radar-push-endpoint
  rules:
    - host: "localhost"
      http:
        paths:
          - path: "/push-endpoint/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: release-name-radar-push-endpoint
                port:
                  name: http
---
# Source: radar-push-endpoint/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-radar-push-endpoint-test-connection"
  labels:
    app.kubernetes.io/name: radar-push-endpoint
    helm.sh/chart: radar-push-endpoint-0.2.3
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['release-name-radar-push-endpoint:8090']
  restartPolicy: Never
